requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
	name = 'synchrophasor'
	version = '1.0.0-alpha'
	description = 'A for of the Synchrophasor module represents implementation of IEEE C37.118.2 standard in Python.'
	authors = [
	{name='Stevan Sandi, Tomo Popovic, Bozo Krstajic', email = 'stevan.sandi@gmail.com'}
	]
	license = {file = "LICENSE.txt"}
	requires-python = ">= 3"
	classifiers=[
				"Development Status :: 3 - Alpha",
				"Intended Audience :: Science/Research",
				"Programming Language :: Python :: 3",
				"Topic :: Scientific/Engineering",
				"License :: OSI Approved :: BSD License",
      ]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["synchrophasor"]
